Hice arreglo dimensionable

--- a/codigo/Makefile
+++ b/codigo/Makefile
@@ -1,18 +1,13 @@
-OBJ = enrutador.o tipos_impl.o tipos_basicos.o
-GCCFLAGS= -g -c -o
+GCCFLAGS= -g -o
 CC=g++
-MAIN = parser.cpp
 
 .PHONY=clean all
 
+parser: parser.cpp
+	$(CC) $< $(GCCFLAGS) $@
+
 all: clean parser
-
-%.o: %.h
-	$(CC) $(GCCFLAGS) $@ $^
-
-parser: parser.o $(OBJ)
-	$(CC) $(MAIN) $(GCCFLAGS) $@
 
 clean:
 	rm -f *.o
-
+	rm -f parser
